[tool.poetry]
name = "pyzarra"
version = "0.1.0"
description = "Python simple data visualizer"
authors = ["Jose Rodriguez <boriel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/version.py:VERSION"
version_pattern = [
    "README.md:^### Version {version}"
]
upload_to_pypi = false
upload_to_release = false
build_command = false
